Introduce upgrade for infernal boiler